<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:id="@+id/normal_toolbar"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/root_toolbar"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_custom_toolbar"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:textColor="#fff"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="TITLE"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/frame_layout_cart_icon_container"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">



            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_shopping_cart_white_24dp"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:id="@+id/cart_main_activity"
                android:layout_centerVertical="true"
                android:layout_marginRight="45dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <RelativeLayout
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:alpha="0.9"
                    android:src="@mipmap/ic_brightness_1_black_24dp"
                    android:tint="@color/colorAccent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="99"
                    android:textColor="#ffff"
                    android:gravity="center"
                    android:id="@+id/cart_quantity_main_activity"
                    android:textStyle="bold"
                    android:textSize="10sp"/>
            </RelativeLayout>



        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_delete_white_24dp"
            android:id="@+id/remove"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="55dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@mipmap/ic_more_vert_white_24dp"
            android:layout_alignParentRight="true"
            android:id="@+id/overflow_main_activity"
            android:layout_centerVertical="true"
            android:paddingRight="13dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>


    </RelativeLayout>

</LinearLayout>