<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ivonneortega.ecommerceapp.CartActivity.CartViewActivity"
    tools:showIn="@layout/activity_cart_view"
    android:id="@+id/scroll_view_cart_activity"
    android:background="#eee"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linear_layout_cart_view"
        android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:id="@+id/recycler_view_cart_activity"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#ffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Order total"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="price"
            android:id="@+id/priceText_checkout"
            android:layout_alignParentRight="true"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryCheckoutPage"
            android:textStyle="bold"/>


    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Checkout"
        android:background="@color/colorCheckoutButton"
        android:layout_marginRight="10dp"
        android:textColor="#ffff"
        android:elevation="0dp"
        android:id="@+id/checkout_button_cart_activity"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="30dp"/>
    </LinearLayout>

</ScrollView>
