<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:id="@+id/root_recycler_view_cart_activity"
              android:layout_marginRight="10dp"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="8dp"
    android:background="#ffff">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/image_checkout"
        android:background="#eee"/>
    <RelativeLayout
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

...
