...
                android:background="@color/colorAuxProductPage"
                android:layout_height="wrap_content"
                android:text="add to cart"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#ffff"
                android:id="@+id/detail_view_add_to_cart"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
...
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/detail_view_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BRAND"
                android:layout_below="@id/detail_view_image"
...
